# pyslam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_3rd.sh
examples/: CMakeLists.txt  run_euroc_slam.cc  run_euroc_slam_with_line.cc  run_image_localization.cc  run_image_localization_point_line.cc
examples/euroc/: EuRoC_mono.yaml
interface/: CMakeLists.txt  data_serializer.cc  data_serializer.h  format_colmap.cc  format_colmap.h  interface_mvs.h  pcl_serializer.cc  pcl_serializer.h  pybind.cc  pybind.h  scene_mvs.cc  scene_mvs.h
interface/protobuf/: map_segment.proto  pointcloud.proto
src/: CMakeLists.txt
src/core/: CMakeLists.txt  config.cc  config.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  system.cc  system.h  tracking_module.cc  tracking_module.h  type.h
src/core/camera/: CMakeLists.txt  base.cc  base.h  equirectangular.cc  equirectangular.h  fisheye.cc  fisheye.h  perspective.cc  perspective.h
src/core/data/: CMakeLists.txt  bow_database.cc  bow_database.h  bow_vocabulary.h  camera_database.cc  camera_database.h  common.cc  common.h  frame.cc  frame.h  frame_statistics.cc  frame_statistics.h  graph_node.cc  graph_node.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  landmark_line.cc  landmark_line.h  map_database.cc  map_database.h
src/core/feature/: CMakeLists.txt  line_extractor.cc  line_extractor.h  orb_extractor.cc  orb_extractor.h  orb_extractor_node.cc  orb_extractor_node.h  orb_params.cc  orb_params.h  orb_point_pairs.h
src/core/feature/line_descriptor/: CMakeLists.txt  LSDDetector_custom.cpp  binary_descriptor_custom.cpp  binary_descriptor_matcher.cpp  bitarray_custom.hpp  bitops_custom.hpp  descriptor_custom.hpp  draw_custom.cpp  line_descriptor_custom.hpp  precomp_custom.hpp
src/core/initialize/: CMakeLists.txt  base.cc  base.h  bearing_vector.cc  bearing_vector.h  perspective.cc  perspective.h
src/core/io/: CMakeLists.txt  map_database_io.cc  map_database_io.h  trajectory_io.cc  trajectory_io.h
src/core/match/: CMakeLists.txt  angle_checker.h  area.cc  area.h  base.h  bow_tree.cc  bow_tree.h  fuse.cc  fuse.h  projection.cc  projection.h  robust.cc  robust.h  stereo.cc  stereo.h
src/core/module/: CMakeLists.txt  frame_tracker.cc  frame_tracker.h  initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  local_map_cleaner.cc  local_map_cleaner.h  local_map_updater.cc  local_map_updater.h  loop_bundle_adjuster.cc  loop_bundle_adjuster.h  loop_detector.cc  loop_detector.h  relocalizer.cc  relocalizer.h  two_view_triangulator.cc  two_view_triangulator.h  two_view_triangulator_line.cc  two_view_triangulator_line.h  type.h
src/core/optimize/: CMakeLists.txt  global_bundle_adjuster.cc  global_bundle_adjuster.h  graph_optimizer.cc  graph_optimizer.h  local_bundle_adjuster.cc  local_bundle_adjuster.h  local_bundle_adjuster_extended_line.cc  local_bundle_adjuster_extended_line.h  pose_optimizer.cc  pose_optimizer.h  pose_optimizer_extended_line.cc  pose_optimizer_extended_line.h  transform_optimizer.cc  transform_optimizer.h
src/core/optimize/g2o/: CMakeLists.txt  landmark_vertex.cc  landmark_vertex.h  landmark_vertex_container.cc  landmark_vertex_container.h  landmark_vertex_container_line3d.cc  landmark_vertex_container_line3d.h  landmark_vertex_line3d.cc  landmark_vertex_line3d.h  line3d.cc  line3d.h
src/core/optimize/g2o/extended/: CMakeLists.txt  plane_point_distance_edge.cc  plane_point_distance_edge.h  point2plane_distance_edge_wrapper.h
src/core/optimize/g2o/se3/: CMakeLists.txt  equirectangular_pose_opt_edge.cc  equirectangular_pose_opt_edge.h  equirectangular_reproj_edge.cc  equirectangular_reproj_edge.h  perspective_pose_opt_edge.cc  perspective_pose_opt_edge.h  perspective_reproj_edge.cc  perspective_reproj_edge.h  pose_opt_edge_line3d_orthonormal.cc  pose_opt_edge_line3d_orthonormal.h  pose_opt_edge_wrapper.h  reproj_edge_line3d_orthonormal.cc  reproj_edge_line3d_orthonormal.h  reproj_edge_wrapper.h  shot_vertex.cc  shot_vertex.h  shot_vertex_container.cc  shot_vertex_container.h
src/core/optimize/g2o/sim3/: CMakeLists.txt  backward_reproj_edge.cc  backward_reproj_edge.h  forward_reproj_edge.cc  forward_reproj_edge.h  graph_opt_edge.cc  graph_opt_edge.h  mutual_reproj_edge_wrapper.h  shot_vertex.cc  shot_vertex.h  transform_vertex.cc  transform_vertex.h
src/core/publish/: CMakeLists.txt  frame_publisher.cc  frame_publisher.h  map_publisher.cc  map_publisher.h
src/core/solve/: CMakeLists.txt  common.cc  common.h  essential_solver.cc  essential_solver.h  fundamental_solver.cc  fundamental_solver.h  homography_solver.cc  homography_solver.h  pnp_solver.cc  pnp_solver.h  sim3_solver.cc  sim3_solver.h  triangulator.h
src/core/solve/GCRANSAC/: CMakeLists.txt  GCRANSAC.h  flann_neighborhood_graph.h  grid_neighborhood_graph.h  model.h  neighborhood_graph.h  preemption_empty.h  preemption_sprt.h  progressive_napsac_sampler.h  prosac_sampler.h  single_point_sampler.h  types.h  uniform_sampler.h
src/core/solve/GCRANSAC/estimator/: CMakeLists.txt  essential_estimator.h  estimator.h  fundamental_estimator.h  homography_estimator.h  linear_model_estimator.h  perspective_n_point_estimator.h  rigid_transformation_estimator.h  sample_consensus_estimator.h
src/core/solve/GCRANSAC/pearl/: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h  LinkedBlockList.cpp  block.h  energy.h  graph.cpp  graph.h  maxflow.cpp
src/core/solve/GCRANSAC/solver/: CMakeLists.txt  solver_dls_pnp.h  solver_engine.h  solver_epnp_lm.h  solver_essential_matrix_five_point_stewenius.h  solver_fundamental_matrix_eight_point.h  solver_fundamental_matrix_seven_point.h  (+5 more)
src/core/util/: CMakeLists.txt  converter.cc  converter.h  fancy_index.h  image_converter.cc  image_converter.h  random_array.cc  random_array.h  stereo_rectifier.cc  stereo_rectifier.h  string.h  trigonometric.h
src/pangolin_viewer/: CMakeLists.txt  viewer.cc  viewer.h
src/socket_publisher/: CMakeLists.txt  data_serializer.cc  data_serializer.h  publisher.cc  publisher.h  socket_client.cc  socket_client.h
(+3 files in other folders)
