##########################
# core library
##########################
add_subdirectory(core)

##########################
# socket publisher
##########################
add_subdirectory(socket_publisher)


##########################
# pangolin viewer
##########################
add_subdirectory(pangolin_viewer)
